# termkey

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/cli/: Cargo.toml
apps/cli/native-messaging/: com.ryanonmars.termkey.template.json
apps/cli/scripts/: generate-branding-assets.sh  register-native-host-macos.sh  uninstall.ps1
apps/cli/src/: cli.rs  clipboard.rs  lib.rs  links.rs  main.rs  update.rs
apps/extension/: manifest.json  package.json  popup.html  tsconfig.json
apps/extension/public/: manifest.json
apps/extension/scripts/: postbuild.mjs
apps/extension/src/: background.ts  content.ts  popup.ts
assets/branding/: termkey-icon-64.b64
docs/: index.html
packaging/macos/: Launcher.swift  README.txt  UninstallerInfo.plist.template  create-dmg.sh  create-pkg.sh  install.command
packaging/macos/scripts/: postinstall
packaging/windows/: termkey.iss
scripts/: install.ps1  uninstall.ps1  update.ps1  validate-release-version.mjs
src/: clipboard.rs  error.rs  main.rs
src/commands/: add.rs  config_cmd.rs  copy.rs  delete.rs  derive.rs  edit.rs  export.rs  import.rs  init.rs  list.rs  passwd.rs  recover.rs  rename.rs  search.rs  view.rs
src/config/: mod.rs  storage.rs
src/crypto/: cipher.rs  derive.rs  entry_key.rs  kdf.rs  mod.rs  passwords.rs  recovery.rs
src/ui/: app.rs  borders.rs  header.rs  mod.rs  terminal.rs  terminal_graphics.rs  theme.rs
src/ui/screens/: add_entry.rs  input.rs  login.rs  mod.rs  nuke.rs  recovery.rs  settings.rs  wizard.rs  (+1 more)
src/vault/: model.rs  storage.rs
(+51 files in other folders)
