[package]
name = "termkey"
version = "0.2.16"
edition = "2021"
description = "CLI encrypted storage manager for cryptocurrency private keys and seed phrases"

[features]
default = ["derive-eth", "derive-btc", "derive-sol"]
derive-eth = ["dep:k256", "dep:sha3"]
derive-btc = ["dep:bitcoin"]
derive-sol = ["dep:ed25519-dalek", "dep:bs58"]

[dependencies]
clap = { version = "4", features = ["derive"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
arboard = "3"
rpassword = "7"
dialoguer = "0.11"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1"
libc = "0.2"
subtle = "2"
console = "0.15"
unicode-width = "0.2"
rustyline = "15"
crossterm = "0.28"
ratatui = "0.28"

# Address derivation (feature-gated)
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
sha3 = { version = "0.10", optional = true }
bitcoin = { version = "0.32", optional = true }
ed25519-dalek = { version = "2", optional = true }
bs58 = { version = "0.5", optional = true }
bip39 = "2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
